# duckdb_exemple

./: .gitignore  create_parquet.py  main.py  products.csv  products.parquet  pyproject.toml  results.ipynb
data/: products.csv  products_10M.parquet  products_10M_duckdb.parquet
scripts/: bigquery_benchmark.py  create_csv.py  create_parquet.py  duckdb_benchmark.py  main.py  pandas_benchmark.py  sqlite_benchmark.py  t1.py
