[project]
name = "duckdb-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.4.3",
    "duckdb>=1.3.2",
    "google-cloud-bigquery>=3.36.0",
    "google-cloud-storage>=3.3.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
]
